Adding Role based on enum and implementing authentication on those roles